--- a/startupaudit/src/startup/components/Login/login.css
+++ b/startupaudit/src/startup/components/Login/login.css
@@ -444,7 +444,7 @@ body {
 }
 
 .box-de {
-  background-image: url(../../images/bg.jpg);
+  background-image: url(../images/bg.jpg);
   background-size: 100%;
   padding: 0px;
   border-top-right-radius: 25px;
