--- a/startupaudit/src/startup/components/Login/login.css
+++ b/startupaudit/src/startup/components/Login/login.css
@@ -315,7 +315,7 @@ body {
 }
 
 .container {
-  max-width: 1100px;
+  max-width: 100%;
 }
 
 /* ===================================== Header CSS ================================== */
